--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "author": "Philipp Hagemeister <phihag@phihag.de>",
   "description": "Fill out PDF forms in pure JavaScript",
   "main": "pdfform.js",
-  "browser": "dist/pdfform.minipdf.dist.js",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
@@ -22,7 +21,9 @@
     "async": "*",
     "eslint": "*",
     "mocha": "^5.0.4",
-    "uglify-js": "3.x"
+    "uglify-js": "3.x",
+    "webpack": "^4.28.2",
+    "webpack-cli": "^3.1.2"
   },
   "version": "1.0.13"
 }
